[project]
name = "plugin-image-gen"
version = "0.3.4"
description = "Generate and edit images inline in chat with the best models — Nano Banana Pro (Gemini), GPT Image, and FLUX. Built on luna_sdk v0."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["plugin_image_gen"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
